Fixed mobile nav, text wrap, moved theme mode to bottom right

--- a/Components/Blog/PostBody/PostData.module.css
+++ b/Components/Blog/PostBody/PostData.module.css
@@ -11,6 +11,7 @@
   text-indent: 20px;
   font-size: 1.2rem;
   margin-left: 20px;
+  word-wrap: break-word;
 }
 .postMain img {
   width: 100%;
